opam-version: "1.2"
name: "rpiterm"
version: "v0.1.2"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "MIT"
homepage: "https://github.com/argent-smith/rpiterm"
dev-repo: "https://github.com/argent-smith/rpiterm"
bug-reports: "https://github.com/argent-smith/rpiterm/issues"
build: [
  [ "jbuilder" "build" "--only" "rpiterm" "--root" "." "-j" jobs "@install" ]
]
build-test: [
  [ "jbuilder" "runtest" ]
]
depends: [
  "jbuilder"
  "lwt"
  "lwt_ppx"
  "fmt"
  "ptime"
  "logs"
  "cmdliner"
  "prometheus"
  "prometheus-app"
  "alcotest" {test}
  "alcotest-lwt" {test}
]
available: [ ocaml-version >= "4.04" ]
