opam-version: "2.0"
name: "rpiterm"
version: "v0.2.6"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "MIT"
homepage: "https://github.com/argent-smith/rpiterm"
dev-repo: "git+https://github.com/argent-smith/rpiterm"
bug-reports: "https://github.com/argent-smith/rpiterm/issues"
build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" ]
]
depends: [
  "ocaml" { >= "4.04" }
  "dune" { >= "1.1.1" }
  "lwt"
  "lwt_ppx"
  "fmt"
  "ptime"
  "logs"
  "cmdliner"
  "prometheus"
  "prometheus-app"
  "alcotest" { with-test }
  "alcotest-lwt" { with-test }
]
