opam-version: "2.0"
name: "rpiterm"
synopsis: "Raspberry Pi SoC thermometer tool"
description: "Raspberry Pi SoC thermometer tool"
version: "v0.2.8"
maintainer: "Pavel Argentov <argentoff@gmail.com>"
authors: "Pavel Argentov <argentoff@gmail.com>"
license: "MIT"
homepage: "https://github.com/argent-smith/rpiterm"
dev-repo: "git+https://github.com/argent-smith/rpiterm"
bug-reports: "https://github.com/argent-smith/rpiterm/issues"
build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name ]
]
depends: [
  "ocaml" { build & >= "4.04" }
  "dune" { build & >= "1.1.1" }
  "lwt" { build }
  "lwt_ppx" { build }
  "cmdliner" { build }
  "prometheus" { build }
  "prometheus-app" { build }
  "alcotest" { with-test }
  "alcotest-lwt" { with-test }
  "ag_logger" { build & = "0.0.1" }
  "merlin" { post }
  "ocaml-lsp-server" { post }
]
pin-depends: [
  [ "ag_logger.0.0.1" "git+https://github.com/argent-smith/ag_logger.git" ]
]
