;; -*- tuareg-dune -*-

(executable
 (name test)
 (libraries alcotest
            alcotest-lwt
            rpiterm_lib)
  (flags (-safe-string))
  (ocamlopt_flags (-O2 -safe-string))
  (preprocess (pps lwt_ppx)))

(rule
 (targets tempfile)
 (action (write-file tempfile 36600)))

(alias
 (name runtest)
 (deps (:x test.exe) tempfile)
 (action (run %{x} -e --color=always)))
